# api-app

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: docker-images.yml  ecr-images.yml
api/: main.py  settings.py
api/routes/: endpoints.py  health_checks.py  user_routes.py  users.py  v1_router.py  v1_routes.py
db/: README.md  schemas.py  session.py  tables.py
db/migrations/: README.md
db/migrations/versions/: 85bcf8b80f2a_initialize_db.py
llm/: knowledge_base.py  storage.py
scripts/: build_dev_image.sh  build_prd_image.sh  create_venv.sh  install.sh  upgrade.sh
workspace/: .gitignore  dev_resources.py  prd_resources.py  settings.py
workspace/example_secrets/: dev_db_secrets.yml
